<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Lib_Common</string>
    <string name="search">搜索</string>
    <string name="contact_str">联系人</string>
    <string name="action_settings">Settings</string>
    <string name="list_back_more">更多</string>
    <string name="popwindow_pending">标为待办</string>
    <string name="popwindow_top">置顶聊天</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="take_txt">文字</string>
    <string name="photo_camera">拍照</string>
    <string name="photo_picker">从手机相册选择</string>
    <string name="list_back_del">删除</string>

    <!-- login -->
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_passward">请输入密码</string>
    <string name="login">登 录</string>
    <string name="regist">注册</string>
    <string name="remember_pwd_str">记住密码</string>
    <string name="auto_login_str">自动登录</string>

    <string name="message_invalid_username_password">用户名或密码错误</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
    <string name="fail_to_load_resource">资源文件下载失败！</string>

    <!-- user -->
    <string name="user_empid">员工号</string>
    <string name="user_city">城市</string>
    <string name="user_objname">部门</string>
    <string name="user_post">岗位</string>
    <string name="user_jobtitle">职级</string>
    <string name="user_jobtitle_2">工号</string>
    <string name="user_phone">手机</string>
    <string name="user_office_phone">座机</string>
    <string name="user_mail">邮箱</string>
    <string name="user_send_msg_btn">发消息</string>
    <string name="user_setting_info">个人信息设置</string>
    <string name="user_setting_info_password">修改密码</string>
    <string name="user_setting_info_old_password">原密码</string>
    <string name="user_setting_info_new_password">新密码</string>
    <string name="user_setting_info_confirm_password">确认密码</string>
    <string name="user_setting_info_detail">(密码修改，手机绑定)</string>
    <string name="user_setting_yinsi">隐私设置</string>
    <string name="user_setting_yanzheng">验证开关配置入口</string>
    <string name="user_setting_other">其他设置</string>
    <string name="user_setting_clearcache">清除缓存</string>
    <string name="user_setting_update">检查更新</string>
    <string name="user_setting_update_orgunition">更新组织架构</string>
    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉加载</string>
    <string name="xlistview_header_hint_ready">松开查看</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>

    <string name="download_tip">提示</string>
    <string name="download_message">下载管理器未开启，开启后才能下载，是否需要开启？</string>
    <string name="cancel">已取消</string>
    <string name="start_a_group_chat">发起群聊</string>
    <string name="pull_to_refresh_footer_nomore">没有更早的记录了</string>
    <string name="can_not_find_sd">找不到sd卡</string>
    <string name="waiting">请稍候&#8230;</string>
    <string name="video_conference">视频会议</string>
</resources>