<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_detail_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <include layout="@layout/comm_topbar_style_3" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
              android:id="@+id/user_detail_header"
              android:layout_width="match_parent"
              android:background="@color/user_detail_bg_color"
              android:layout_height="wrap_content"
                android:padding="@dimen/dp_12" >
                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="@dimen/dp_69"
                    android:layout_height="@dimen/dp_69"
                    android:src="@drawable/avatar_male" />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toRightOf="@id/user_avatar"
                    android:textColor="@color/user_detail_name_color"
                    android:textSize="@dimen/sp_18" />
                <ImageView
                    android:id="@+id/user_gender"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignTop="@id/user_name"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_toRightOf="@id/user_name"
                    android:src="@drawable/user_man" />
                <TextView
                    android:id="@+id/user_subname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/user_name"
                    android:layout_below="@id/user_name"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text=""
                    android:textColor="@color/user_detail_subname_color"
                    android:textSize="@dimen/sp_16" />
                <ImageView
                    android:id="@+id/user_add_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/star_2"
                    android:visibility="visible" />

                <TextView
                  android:id="@+id/user_look_resume"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_16"
                  android:text="查看简历"
                  android:layout_centerVertical="true"
                  android:layout_marginRight="@dimen/dp_10"
                  android:textColor="@color/user_detail_title_color"
                  android:layout_toLeftOf="@+id/user_add_friend"
                  android:layout_toStartOf="@+id/user_add_friend"
                  android:visibility="gone" />

                <ImageView
                    android:id="@+id/user_call_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_50"
                    android:src="@drawable/user_phone"
                    android:visibility="gone" />
            </RelativeLayout>
            <LinearLayout
              android:id="@+id/user_detail_mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical"
                    android:visibility="gone" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_empid"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_empid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:text="124354613"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_city"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:text=""
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_objname"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_objname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_post"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/user_post"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_jobtitle_2"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:textColor="@color/user_detail_content_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </LinearLayout>

            <View
              android:layout_width="match_parent"
              android:background="@color/user_detail_bg_color"
              android:layout_height="25dp"/>

            <LinearLayout
              android:id="@+id/user_detail_bm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_phone"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/user_detail_content_blue_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_office_phone"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_office_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:drawableRight="@drawable/go"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/user_detail_content_blue_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ems="3"
                        android:text="@string/user_mail"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                    <TextView
                        android:id="@+id/user_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:drawableRight="@drawable/go"
                        android:textColor="@color/user_detail_content_blue_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
                
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/user_detail_title_line_color" />

                <LinearLayout
                    android:id="@+id/user_to_colleage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:text="同事圈"
                        android:textColor="@color/user_detail_title_color"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/user_send_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_44"
                android:background="@drawable/btn_green"
                android:text="@string/user_send_msg_btn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>